<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/corner_rect_blank"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_address"
                android:textColor="#000000"
                android:textSize="20dip" >
            </TextView>

            <EditText
                android:id="@+id/ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="15"
                android:hint="@string/ip_enter" >
            </EditText>
        </TableRow>


        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="10dip" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"
                android:textColor="#000000"
                android:textSize="20dip" >
            </TextView>

            <EditText
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:layout_weight="1"
                android:hint="@string/port_enter" >
            </EditText>
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sure"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/sure"
            >
        </Button>

        <Button
            android:id="@+id/cancel"
            android:layout_toRightOf="@id/sure"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" >
        </Button>
    </RelativeLayout>
</LinearLayout>