<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="20dip" />

            <EditText
                android:id="@+id/edit_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:layout_weight="1"
                android:hint="@string/tips_amount"
                android:numeric="integer" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips_flow"
                android:textSize="20dip" />

            <EditText
                android:id="@+id/edit_flow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="12"
                android:layout_weight="1"
                android:hint="@string/tips_repeal"
                android:numeric="integer" />
        </TableRow>

    </TableLayout>
</LinearLayout>