<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/always_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/led_always_dark" >
        </RadioButton>

        <RadioButton
            android:id="@+id/always_bright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_always_bright" >
        </RadioButton>

        <RadioButton
            android:id="@+id/keep_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_keep_ms" >
        </RadioButton>
    </RadioGroup>

    <TableLayout
        android:id="@+id/keep_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keep_ms"
                android:textSize="15dip" />

            <EditText
                android:id="@+id/edit_ms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="5"
                android:numeric="integer" />
        </TableRow>
    </TableLayout>

</LinearLayout>